--- a/config/longrun_configs/longrun_bw_rhoe_equil_highres_topography_earth.yml
+++ b/config/longrun_configs/longrun_bw_rhoe_equil_highres_topography_earth.yml
@@ -12,6 +12,7 @@ precip_model: "0M"
 topography: "Earth"
 job_id: "longrun_bw_rhoe_equil_highres_topography_earth"
 moist: "equil"
+output_default_diagnostics: false
 diagnostics:
-  - short_name: [pfull, wa, va, rv, hus]
+  - short_name: [ts, ta, thetaa, ha, pfull, rhoa, ua, va, wa, hur, hus, cl, clw, cli, hussfc, pr]
     period: 1days
