--- a/config/longrun_configs/longrun_aquaplanet_rhoe_equil_clearsky_tvinsol_0M_slabocean.yml
+++ b/config/longrun_configs/longrun_aquaplanet_rhoe_equil_clearsky_tvinsol_0M_slabocean.yml
@@ -13,3 +13,8 @@ prognostic_surface: "PrognosticSurfaceTemperature"
 check_conservation: true
 bubble: false
 job_id: "longrun_aquaplanet_rhoe_equil_clearsky_tvinsol_0M_slabocean"
+output_default_diagnostics: false
+diagnostics:
+  - short_name: [ts, ta, thetaa, ha, pfull, rhoa, ua, va, wa, hfes, hur, hus, hussfc, cl, clw, cli, evspsbl, pr, rsd, rsu, rld, rlu]
+    reduction_time: average
+    period: 10days
