--- a/config/longrun_configs/longrun_sphere_hydrostatic_balance_rhoe.yml
+++ b/config/longrun_configs/longrun_sphere_hydrostatic_balance_rhoe.yml
@@ -1,9 +1,15 @@
 h_elem: 16
-z_elem: 45
+z_elem: 63
 dz_bottom: 30.0
+dz_top: 3000.0
+z_max: 55000.0
 dt: "400secs"
 perturb_initstate: false 
 discrete_hydrostatic_balance: true 
-t_end: "800days" 
-dt_save_state_to_disk: "10days" 
+t_end: "750days" 
+dt_save_state_to_disk: "30days" 
 job_id: "longrun_sphere_hydrostatic_balance_rhoe"
+output_default_diagnostics: false
+diagnostics:
+  - short_name: [ts, ta, thetaa, ha, pfull, rhoa, ua, va, wa]
+    period: 30days
